NACL.tf
resource "aws_network_acl" "main" {
  vpc_id = aws_vpc.main.id

  egress {
    protocol   = "tcp"
    rule_no    = 200
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 443 # Порт 443: Используется для защищенных HTTPS-соединений (например, безопасный веб-трафик).
    to_port    = 443
  }

  ingress {
    protocol   = "tcp"
    rule_no    = 100
    action     = "allow"
    cidr_block = "10.3.0.0/18"
    from_port  = 80 # Порт 80: Используется для стандартных HTTP-соединений (обычный веб-трафик).
    to_port    = 80
  }

  tags = {
    Name = "My-NACL"
  }
}
